# vice-emu

./: .gitignore
vice/src/arch/unix/macosx/Resources/en.lproj/: DisassemblyWindow.xib  DriveSettings.xib  FilePanelImageContents.xib  IECDriveSettings.xib  IOTreeWindow.xib  JoystickSettings.xib  KeyboardSettings.xib  Makefile.am  MemoryWindow.xib  NetplayControl.xib  PrinterSettings.xib  RecordMedia.xib  RegisterWindow.xib  ResourceEditor.xib  SIDSettings.xib  SoundSettings.xib  VICEInformation.xib  VideoSettings.xib  x128.xib  x64sc.xib  xcbm2.xib  xpet.xib  xplus4.xib  xvic.xib
vice/src/arch/unix/macosx/Resources/en.lproj/DisassemblyWindow.nib/: designable.nib  keyedobjects-101300.nib  keyedobjects-110000.nib  keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/DriveSettings.nib/: designable.nib  keyedobjects-101300.nib  keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/FilePanelImageContents.nib/: designable.nib  keyedobjects-101300.nib  keyedobjects-110000.nib  keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/IECDriveSettings.nib/: designable.nib  keyedobjects-101300.nib  keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/IOTreeWindow.nib/: designable.nib  keyedobjects-101300.nib  keyedobjects-110000.nib  keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/JoystickSettings.nib/: keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/KeyboardSettings.nib/: designable.nib  keyedobjects-101300.nib  keyedobjects.nib
vice/src/arch/unix/macosx/Resources/en.lproj/MemoryWindow.nib/: designable.nib  (+3 more)
(+327 files in other folders)
