EXTRA_DIST = \
	ResourceTree.plist \
	x128.xib \
	x64.xib \
	x64sc.xib \
	x64dtv.xib \
	xvic.xib \
	xcbm2.xib \
	xpet.xib \
	xplus4.xib \
	FilePanelImageContents.xib \
	VICEInformation.xib \
	DriveSettings.xib \
	DisassemblyWindow.xib \
	IECDriveSettings.xib \
	IOTree.plist \
	IOTreeWindow.xib \
	MemoryWindow.xib \
	NetplayControl.xib \
	PrinterSettings.xib \
	KeyboardSettings.xib \
	JoystickSettings.xib \
	RecordMedia.xib \
	RecordHistory.xib \
	RegisterWindow.xib \
	ResourceEditor.xib \
	SIDSettings.xib \
	SoundSettings.xib \
	VideoSettings.xib

